# FLIPTRIP-machine-coding

./: AirlineManagementSystemQuestion.md  CMakeLists.txt  README.md
include/: Airline.hpp  Exception.hpp  Flight.hpp  FlightManager.hpp
src/: Airline.cpp  Exception.cpp  Flight.cpp  FlightManager.cpp  main.cpp
